--- a/index.html
+++ b/index.html
@@ -63,10 +63,16 @@
                     <p class=" d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod
                         tempor incididunt ut dolor the sit amet consectetur adipisicing
                         elit sed do consectetur labore et dolo...</p>
-                    <div class="mt-4">
-                        <button class="btn myElement viewmore rounded-0 py-2 px-4">VIEW MORE</button>
-                    </div>
-
+                        <!-- <div class="d-flex">
+                          <div class="mt-4 me-4">
+                              <button class="btn myElement viewmore rounded-0 py-2">VIEW MORE 
+                              </button>
+                          </div>                      
+                        </div> -->
+                        <video width="400" controls>
+                          <source src="/video/v1.mp4" type="video/mp4">
+                          Your browser does not support HTML video.
+                        </video>
                 </div>
             </div>
         </div>
@@ -131,11 +137,18 @@
                       <p><span class="fw-bold">E-mail:</span> <span class="text-muted">Plakson@gmail.com</span></p>
                   </div>
               </div>
-              <div class="mt-4">
+              <div class="mt-4 mb-5">
                   <button class="btn btn-success p-2 px-4 rounded-0">
                       DOWNLOAD CV
                   </button>
               </div>
+              <label>AUDIO</label><br/>
+              <audio controls >
+                <source src="audio/sample-6s.mp" >
+                <source src="audio/sample-9s.mpx" >
+                Your browser does not support the audio element.
+              </audio>
+              
           </div>
         </div>
     </section>
